updated the circle size and resolved the first section overflowing error

--- a/src/App.css
+++ b/src/App.css
@@ -125,9 +125,12 @@ body{
 
 
 @media only screen  and (max-height: 667px) {
-  .extra{
-    /* justify-content: end; */
-    /* background: green; */
+  .circle-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20rem;
+    height: 9rem;
   }
 }
 
